--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,9 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/1027/Desktop/JeeWorkspace/lombok.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/1027/Desktop/JeeWorkspace/cos.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/1027/Desktop/JeeWorkspace/jstl.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/1027/Desktop/JeeWorkspace/standard.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
